# Finetune_Lora_for_Time_Series_Forecasting

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
scripts/: evaluate.sh  evaluate_temperature.sh  finetune_lora.sh  finetune_lora_best_model.sh  lora_ablation_context.sh  lora_ablation_lr.sh  lora_ablation_rank.sh
src/: evaluate.py  evaluate_temperature.py  flops.py  forecast_evaluation.py  forecast_evaluation_temperature.py  inference.py  lora_skeleton.py  m2_preprocess_and_flops.ipynb  main.py  preprocessor.py
src/data_processing/: split_test.ipynb  split_train_eval_set.py
src/models/: lora_linear.py  qwen.py
src/utils/: calflops_FLOPS_validation.py  prepare_lora_data.py
